--- a/mealmates-api/pom.xml
+++ b/mealmates-api/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+
         <!-- H2 Database dependency for in-memory database support -->
         <dependency>
             <groupId>com.h2database</groupId>
