--- a/mealmates-api/pom.xml
+++ b/mealmates-api/pom.xml
@@ -78,7 +78,15 @@
             <artifactId>jjwt-jackson</artifactId>
             <version>0.11.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.0</version> <!-- Use the latest version available -->
+        </dependency>
     </dependencies>
+
+
 
     <build>
         <plugins>
